# crosspost_rs

./: .env  .gitignore  Cargo.toml  Dockerfile  rate.md  required_perms.md
assets/: Dockerfile  token.txt
db/: data.db  data.db-shm  data.db-wal
src/: commands.rs  handler.rs  info.rs  main.rs
src/db/: channel.rs  cross_db.rs  guild.rs  message.rs  mod.rs
